# tsmusicbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: publish.yaml
src/: helper.rs  main.rs
