[package]
name = "tsmusicbot"
version = "0.1.0"
description = "A TeamSpeak3 music bot."
edition = "2018"

[dependencies]
byteorder = "1.5.0"
audiopus = "0.2.0"
serde = "1.0.217"
serde_json = "1.0.134"
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
anyhow = "1.0.95"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["time", "signal"] }
tokio-stream = "0.1.17"
log = "0.4.22"
env_logger = "0.11.6"
zeroize = "1.8.1"

[dependencies.slog]
version = "2.7.0"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]
tokio = { version = "1.42.0", features = ["io-util", "net", "rt-multi-thread", "rt", "signal"] }